--- a/k8s/api_deployment.yaml
+++ b/k8s/api_deployment.yaml
@@ -1,3 +1,30 @@
-
-
-sdbr1234/api-mongo-employees:1.0
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      containers:
+        - name: app
+          image: sdbr1234/api-mongo-employees:latest
+          ports:
+            - containerPort: 8000
+          env:
+            - name: MONGO_HOST
+              value: 'mongo'
+            - name: MONGO_PORT
+              value: "27017"
+            - name: MONGO_DB
+              value: 'employees'
+            - name: MONGO_USER
+              value: 'root'
+            - name: MONGO_PASSWORD
+              value: 'rootpassword'
