--- a/k8s/statefulset_mongon.yaml
+++ b/k8s/statefulset_mongon.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: mongo
-          image: mongo:7.0
+          image: docker.io/library/mongo:7.0
           ports:
             - containerPort: 27017
           env:
